--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script> -->
 	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script> -->
 
-	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
-	<script type="text/javascript" src="./static/js/jquery-3.1.1.slim.min.js"></script>
-	<script type="text/javascript" src="./static/js/tether.min.js"></script>
-	<script type="text/javascript" src="./static/js/bootstrap.min.js"></script>
+	<!-- get [unexpected token '<'] errors when import sourcefiles with './source-path', remove the dot it will be fine!!! -->
+
+	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+	<script type="text/javascript" src="/static/js/jquery-3.1.1.slim.min.js"></script>
+	<script type="text/javascript" src="/static/js/tether.min.js"></script>
+	<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 	
-	<link rel="stylesheet" type="text/css" href="./static/css/mod.css" >
+	<link rel="stylesheet" type="text/css" href="/static/css/common.css" >
+	<link rel="stylesheet" type="text/css" href="/static/css/mod.css" >
 </head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="./dist/app.bundle.js"></script>
+<script type="text/javascript" src="/dist/app.bundle.js"></script>
 </body>
 </html>
