add chatroom basic component and socket.io

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="/dist/app.bundle.js"></script>
+<script type="text/javascript" src="/dist/app.bundle.js" ></script>
+<script src="/node_modules/socket.io-client/dist/socket.io.js"></script>
+<script type="text/javascript" src="/client/chat.js" ></script>
 </body>
 </html>
