add user name to jwt token, client side can decode token and get user name and id

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="/static/js/tether.min.js"></script>
 	<script type="text/javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-	
+	<script type="text/javascript" src="/node_modules/jwt-decode/build/jwt-decode.min.js"></script>
   <script type="text/javascript" src="/node_modules/moment/min/moment.min.js"></script>
   <script type="text/javascript" src="/node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <link rel="stylesheet" href="/node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
