--- a/index.html
+++ b/index.html
@@ -4,38 +4,34 @@
 	<title>Mission Park</title>
 	<meta content="width=device-width,initial-scale=1" name="viewport">
 	
-	<link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"  -->
-		<!-- integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-	<script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
-	<!-- <script src="http://code.jquery.com/jquery-2.2.4.min.js" -->
-	  <!-- integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script> -->
-	<script type="text/javascript" src="/static/js/tether.min.js"></script>
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" 
-		integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script> -->
+	<!-- <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-	<script type="text/javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+	<!-- <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script> -->
+	<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+
 	<script type="text/javascript" src="/node_modules/jwt-decode/build/jwt-decode.min.js"></script>
 
-  <script type="text/javascript" src="/node_modules/moment/min/moment.min.js"></script>
-  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
-  <script type="text/javascript" src="/node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-  <!-- <script type="text/javascript"  -->
-  	<!-- src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script> -->
-  <link rel="stylesheet" href="/node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
-  <!-- <link rel="stylesheet" type="text/css" 
-  	href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"> -->
-	
+  <!-- <link rel="stylesheet" href="/node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" /> -->
+  <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+
   <link rel="stylesheet" type="text/css" href="/static/css/common.css" >
 	<link rel="stylesheet" type="text/css" href="/static/css/overwrite.css" >
 
 </head>
 <body>
 <div id="app"></div>
-<script src="/node_modules/socket.io-client/dist/socket.io.js"></script>
-<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script> -->
+
+<!-- <script type="text/javascript" src="/static/js/tether.min.js"></script> -->
+<script src="https://cdn.bootcss.com/tether/1.4.0/js/tether.min.js"></script>
+<!-- <script type="text/javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script> -->
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- <script type="text/javascript" src="/node_modules/moment/min/moment.min.js"></script> -->
+<script src="https://cdn.bootcss.com/moment.js/2.18.1/moment.min.js"></script>
+<!-- <script type="text/javascript" src="/node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script> -->
+<script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+<!-- <script src="/node_modules/socket.io-client/dist/socket.io.js"></script> -->
+<script src="https://cdn.bootcss.com/socket.io/2.0.3/socket.io.slim.js"></script>
 <script type="text/javascript">
 	var socket = io.connect();
 </script>
